# unitree-g1-dashboard

./: .gitignore  CLAUDE.md  Dockerfile  README.md  SPEC.md
docs/: USAGE.md
ros2_ws/src/g1_dashboard/: package.xml  setup.cfg  setup.py
ros2_ws/src/g1_dashboard/config/: dashboard_params.yaml
ros2_ws/src/g1_dashboard/g1_dashboard/: dashboard_node.py  main.py  main_window.py  simulator.py
ros2_ws/src/g1_dashboard/g1_dashboard/config/: robot_config.py  ros_config.py
ros2_ws/src/g1_dashboard/g1_dashboard/panels/: camera_panel.py  digital_twin_panel.py  joint_control_panel.py  lidar_panel.py  status_panel.py
ros2_ws/src/g1_dashboard/g1_dashboard/rendering/: camera_controller.py  gl_widget.py  grid_renderer.py  point_cloud_renderer.py  robot_renderer.py
ros2_ws/src/g1_dashboard/g1_dashboard/utils/: color_maps.py  commanded_state.py  kinematics.py  point_cloud_utils.py  qt_ros_bridge.py  selection.py  transforms.py
ros2_ws/src/g1_dashboard/g1_dashboard/widgets/: battery_gauge.py  joint_row.py  motor_temp_heatmap.py  rolling_plot.py  topic_indicator.py
ros2_ws/src/g1_dashboard/launch/: dashboard.launch.py  dashboard_only.launch.py
ros2_ws/src/g1_dashboard/resource/styles/: dark_theme.qss
ros2_ws/src/g1_dashboard/test/: test_camera_controller.py  test_color_maps.py  test_commanded_state.py  test_gain_presets.py  test_joint_row.py  test_kinematics.py  test_motor_temp_colors.py  test_msg_to_qimage.py  test_point_cloud_utils.py  test_robot_config.py  test_selection.py  test_transforms.py
ros2_ws/src/g1_dashboard_bridge/: CMakeLists.txt  package.xml
ros2_ws/src/g1_dashboard_bridge/config/: bridge_params.yaml
ros2_ws/src/g1_dashboard_bridge/include/g1_dashboard_bridge/: bridge_node.hpp  g1_joint_config.hpp  safety_monitor.hpp
ros2_ws/src/g1_dashboard_bridge/launch/: bridge_only.launch.py
ros2_ws/src/g1_dashboard_bridge/src/: bridge_node.cpp  safety_monitor.cpp
ros2_ws/src/g1_dashboard_bridge/test/: test_joint_limits.cpp  test_safety_monitor.cpp
ros2_ws/src/g1_dashboard_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/g1_dashboard_msgs/msg/: JointCommand.msg  RobotState.msg  SafetyStatus.msg
ros2_ws/src/g1_dashboard_msgs/srv/: EmergencyStop.srv  SetControlMode.srv
scripts/: launch_all.sh  setup_network.sh
